hal/include/HAL/Digital.h

  bool getEncoderDirection(void* encoder_pointer, int32_t *status);
  void setEncoderReverseDirection(void* encoder_pointer, bool reverseDirection, int32_t *status);
  void setEncoderSamplesToAverage(void* encoder_pointer, uint32_t samplesToAverage, int32_t *status);
  uint32_t getEncoderSamplesToAverage(void* encoder_pointer, int32_t *status);
  uint16_t getLoopTiming(int32_t *status);
  uint16_t getLoopTimingWithModule(uint8_t module, int32_t *status);
  void* initializeSPI(uint8_t sclk_routing_module, uint32_t sclk_routing_pin,
					  uint8_t mosi_routing_module, uint32_t mosi_routing_pin,
					  uint8_t miso_routing_module, uint32_t miso_routing_pin, int32_t *status);
  void cleanSPI(void* spi_pointer, int32_t *status);
  void setSPIBitsPerWord(void* spi_pointer, uint32_t bits, int32_t *status);
  uint32_t getSPIBitsPerWord(void* spi_pointer, int32_t *status);
  void setSPIClockRate(void* spi_pointer, double hz, int32_t *status);
  void setSPIMSBFirst(void* spi_pointer, int32_t *status);
  void setSPILSBFirst(void* spi_pointer, int32_t *status);
  void setSPISampleDataOnFalling(void* spi_pointer, int32_t *status);
  void setSPISampleDataOnRising(void* spi_pointer, int32_t *status);