wpilibj/wpilibJava/src/main/java/edu/wpi/first/wpilibj/hal/HALLibrary.java

	/**
	 * Original signature : <code>bool getEncoderDirection(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:83</i><br>
	 * @deprecated use the safer methods {@link #getEncoderDirection(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getEncoderDirection(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native byte getEncoderDirection(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>bool getEncoderDirection(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:83</i>
	 */
	public static native byte getEncoderDirection(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setEncoderReverseDirection(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:84</i><br>
	 * @deprecated use the safer methods {@link #setEncoderReverseDirection(com.sun.jna.Pointer, byte, java.nio.IntBuffer)} and {@link #setEncoderReverseDirection(com.sun.jna.Pointer, byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setEncoderReverseDirection(Pointer encoder_pointer, byte reverseDirection, IntByReference status);
	/**
	 * Original signature : <code>void setEncoderReverseDirection(void*, bool, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:84</i>
	 */
	public static native void setEncoderReverseDirection(Pointer encoder_pointer, byte reverseDirection, IntBuffer status);
	/**
	 * Original signature : <code>void setEncoderSamplesToAverage(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:85</i><br>
	 * @deprecated use the safer methods {@link #setEncoderSamplesToAverage(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setEncoderSamplesToAverage(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setEncoderSamplesToAverage(Pointer encoder_pointer, int samplesToAverage, IntByReference status);
	/**
	 * Original signature : <code>void setEncoderSamplesToAverage(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:85</i>
	 */
	public static native void setEncoderSamplesToAverage(Pointer encoder_pointer, int samplesToAverage, IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getEncoderSamplesToAverage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:86</i><br>
	 * @deprecated use the safer methods {@link #getEncoderSamplesToAverage(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getEncoderSamplesToAverage(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getEncoderSamplesToAverage(Pointer encoder_pointer, IntByReference status);
	/**
	 * Original signature : <code>uint32_t getEncoderSamplesToAverage(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:86</i>
	 */
	public static native int getEncoderSamplesToAverage(Pointer encoder_pointer, IntBuffer status);
	/**
	 * Original signature : <code>uint16_t getLoopTiming(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:88</i><br>
	 * @deprecated use the safer methods {@link #getLoopTiming(java.nio.IntBuffer)} and {@link #getLoopTiming(com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native short getLoopTiming(IntByReference status);
	/**
	 * Original signature : <code>uint16_t getLoopTiming(int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:88</i>
	 */
	public static native short getLoopTiming(IntBuffer status);
	/**
	 * Original signature : <code>uint16_t getLoopTimingWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:89</i><br>
	 * @deprecated use the safer methods {@link #getLoopTimingWithModule(byte, java.nio.IntBuffer)} and {@link #getLoopTimingWithModule(byte, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native short getLoopTimingWithModule(byte module, IntByReference status);
	/**
	 * Original signature : <code>uint16_t getLoopTimingWithModule(uint8_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:89</i>
	 */
	public static native short getLoopTimingWithModule(byte module, IntBuffer status);
	/**
	 * Original signature : <code>void* initializeSPI(uint8_t, uint32_t, uint8_t, uint32_t, uint8_t, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:93</i><br>
	 * @deprecated use the safer methods {@link #initializeSPI(byte, int, byte, int, byte, int, java.nio.IntBuffer)} and {@link #initializeSPI(byte, int, byte, int, byte, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native Pointer initializeSPI(byte sclk_routing_module, int sclk_routing_pin, byte mosi_routing_module, int mosi_routing_pin, byte miso_routing_module, int miso_routing_pin, IntByReference status);
	/**
	 * Original signature : <code>void* initializeSPI(uint8_t, uint32_t, uint8_t, uint32_t, uint8_t, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:93</i>
	 */
	public static native Pointer initializeSPI(byte sclk_routing_module, int sclk_routing_pin, byte mosi_routing_module, int mosi_routing_pin, byte miso_routing_module, int miso_routing_pin, IntBuffer status);
	/**
	 * Original signature : <code>void cleanSPI(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:96</i><br>
	 * @deprecated use the safer methods {@link #cleanSPI(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #cleanSPI(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void cleanSPI(Pointer spi_pointer, IntByReference status);
	/**
	 * Original signature : <code>void cleanSPI(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:96</i>
	 */
	public static native void cleanSPI(Pointer spi_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setSPIBitsPerWord(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:97</i><br>
	 * @deprecated use the safer methods {@link #setSPIBitsPerWord(com.sun.jna.Pointer, int, java.nio.IntBuffer)} and {@link #setSPIBitsPerWord(com.sun.jna.Pointer, int, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setSPIBitsPerWord(Pointer spi_pointer, int bits, IntByReference status);
	/**
	 * Original signature : <code>void setSPIBitsPerWord(void*, uint32_t, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:97</i>
	 */
	public static native void setSPIBitsPerWord(Pointer spi_pointer, int bits, IntBuffer status);
	/**
	 * Original signature : <code>uint32_t getSPIBitsPerWord(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:98</i><br>
	 * @deprecated use the safer methods {@link #getSPIBitsPerWord(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #getSPIBitsPerWord(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native int getSPIBitsPerWord(Pointer spi_pointer, IntByReference status);
	/**
	 * Original signature : <code>uint32_t getSPIBitsPerWord(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:98</i>
	 */
	public static native int getSPIBitsPerWord(Pointer spi_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setSPIClockRate(void*, double, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:99</i><br>
	 * @deprecated use the safer methods {@link #setSPIClockRate(com.sun.jna.Pointer, double, java.nio.IntBuffer)} and {@link #setSPIClockRate(com.sun.jna.Pointer, double, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setSPIClockRate(Pointer spi_pointer, double hz, IntByReference status);
	/**
	 * Original signature : <code>void setSPIClockRate(void*, double, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:99</i>
	 */
	public static native void setSPIClockRate(Pointer spi_pointer, double hz, IntBuffer status);
	/**
	 * Original signature : <code>void setSPIMSBFirst(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:100</i><br>
	 * @deprecated use the safer methods {@link #setSPIMSBFirst(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #setSPIMSBFirst(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setSPIMSBFirst(Pointer spi_pointer, IntByReference status);
	/**
	 * Original signature : <code>void setSPIMSBFirst(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:100</i>
	 */
	public static native void setSPIMSBFirst(Pointer spi_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setSPILSBFirst(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:101</i><br>
	 * @deprecated use the safer methods {@link #setSPILSBFirst(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #setSPILSBFirst(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setSPILSBFirst(Pointer spi_pointer, IntByReference status);
	/**
	 * Original signature : <code>void setSPILSBFirst(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:101</i>
	 */
	public static native void setSPILSBFirst(Pointer spi_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setSPISampleDataOnFalling(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:102</i><br>
	 * @deprecated use the safer methods {@link #setSPISampleDataOnFalling(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #setSPISampleDataOnFalling(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setSPISampleDataOnFalling(Pointer spi_pointer, IntByReference status);
	/**
	 * Original signature : <code>void setSPISampleDataOnFalling(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:102</i>
	 */
	public static native void setSPISampleDataOnFalling(Pointer spi_pointer, IntBuffer status);
	/**
	 * Original signature : <code>void setSPISampleDataOnRising(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:103</i><br>
	 * @deprecated use the safer methods {@link #setSPISampleDataOnRising(com.sun.jna.Pointer, java.nio.IntBuffer)} and {@link #setSPISampleDataOnRising(com.sun.jna.Pointer, com.sun.jna.ptr.IntByReference)} instead
	 */
	@Deprecated 
	public static native void setSPISampleDataOnRising(Pointer spi_pointer, IntByReference status);
	/**
	 * Original signature : <code>void setSPISampleDataOnRising(void*, int32_t*)</code><br>
	 * <i>native declaration : target/native/include/HAL/Digital.h:103</i>
	 */
	public static native void setSPISampleDataOnRising(Pointer spi_pointer, IntBuffer status);
